--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,132 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__link:hover{
+  position: relative;
+  text-decoration: none;
+  color: #0090D4;
+}
+
+.nav__link:hover{
+  transition: color .3s;
+}
+.nav__link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #0090D4;
+  transition: width .3s;
+}
+
+strong {
+  color: #0090D4
+}
+
+.nav__link:hover::after {
+  width: 100%;
+  transition: width .3s;
+}
+
+/* section styles */
+
+.section-header {
+  color: #42494BE0;
+  font-weight: 500;
+}
+
+.action-button {
+  color: white;
+  width: fit-content;
+}
+
+.action-button:hover {
+  scale: 1.1;
+}
+.img-right {
+  animation: translate-from-right 0.7s ease-in-out;
+}
+.img-left {
+  animation: translate-from-left 0.7s ease-in-out;
+}
+
+.sign {
+  font-family: 'Cedarville Cursive', cursive;
+  white-space: nowrap;
+  margin: 0;
+  max-width: max-content;
+  overflow: hidden; 
+  animation: 
+    4s typing-erase 4s steps(50, end) infinite,
+    blink-caret .5s step-end infinite;  
+}
+
+@keyframes translate-from-right {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes translate-from-left {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes typing-erase {
+  0% { width: 0 }
+  80% { width: 100% }
+  90%, 100% { width: 0 }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: gray }
+}
+
+/* slider styles */
+.slick-track
+{
+    display: flex !important;
+    gap: 5px !important;
+    min-width: 500px !important;
+}
+
+.slick-slide {
+  height: inherit !important;
+}
+
+.slick-slide > div
+{
+    height: 100%;
+}
+.testimony-card {
+  height: inherit;
+}
+
+.slick-slider {
+  visibility: hidden !important;
+}
+.slick-slider.slick-initialized {
+  visibility: visible !important;
 }
