--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,10 @@ strong {
   color: #0090D4
 }
 
+a.active {
+  color: #0090D4;
+}
+
 .nav__link:hover::after {
   width: 100%;
   transition: width .3s;
