update: posts structure and styles added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -146,10 +146,75 @@ p>img {
 .testimony-card {
   height: inherit;
 }
-/* 
-.slick-slider {
-  visibility: hidden !important;
+/* ARTICLE STYLES */
+#article p, #article h2 {
+  padding: 10px 0px;
 }
-.slick-slider.slick-initialized {
-  visibility: visible !important;
-} */
+
+#article {
+  font-size: 1.125rem;
+  color: #6b7280;
+}
+
+#article h3, #article h2 {
+  font-weight: bold;
+  color: #0090D4;
+}
+
+#article h1 {
+  color: #030712;
+}
+#article h2 {
+  font-size: 1.5rem;
+}
+
+#article h3 {
+  font-size: 1.3rem;
+}
+
+#article ol {
+  list-style-type: decimal;
+}
+
+#article ul {
+  list-style-type: disc;
+}
+
+
+#article li {
+  margin-left: 20px;
+}
+#article a {
+  color: #030712;
+  text-decoration: none;
+  width: fit-content;
+}
+#article a:hover {
+  transition: color .3s;
+  text-decoration: none;
+  color: #0090D4;
+}
+
+#article p a {
+  display: inline-block;
+}
+
+#article img {
+  width: 100%;
+  height: auto;
+  border-radius: 1%;
+  box-shadow: #030712 1px 1px ;
+}
+
+#article a::after{
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #0090D4;
+  transition: width .3s;
+}
+#article a:hover::after {
+  width: 100%;
+  transition: width .3s;
+}
