--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,6 @@ p>img {
 
 .action-button {
   color: white;
-  width: fit-content;
   transition: all 0.3s ease-in-out ;
 }
 
@@ -156,6 +155,16 @@ p>img {
   color: #6b7280;
 }
 
+#article table {
+  width: 100%;
+  overflow-x: auto;
+  text-align: left;
+}
+
+tr {
+  border-bottom: 1px solid #ddd;
+} 
+
 #article h3, #article h2 {
   font-weight: bold;
   color: #0090D4;
@@ -163,6 +172,7 @@ p>img {
 
 #article h1 {
   color: #030712;
+  margin-bottom: 10px;
 }
 #article h2 {
   font-size: 1.5rem;
@@ -200,10 +210,15 @@ p>img {
 }
 
 #article img {
-  width: 100%;
+  width: fit-content;
+  text-align: center;
   height: auto;
+  max-height: 400px;
   border-radius: 1%;
   box-shadow: #030712 1px 1px ;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #article a::after{
@@ -218,3 +233,18 @@ p>img {
   width: 100%;
   transition: width .3s;
 }
+
+/* .articles {
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(
+      300px,
+      1fr
+    )
+    );
+    gap: 16px;
+    place-items: center;
+    align-items: center;
+    align-content: start;
+} */
